feat : 도서 주문 상태 추가 #28

--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,7 @@ build/
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+!gradle-wrapper.jarb
 
 # Cache of project
 .gradletasknamecache
