--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,11 @@ on:
   pull_request:
     branches: [ "develop" ]
 
+
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   build:
 
