--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://s4.java21.net:13306/project_be10_team1_dev
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: project_be10_team1
+    password: N(zwIEW9ge203yXO)
   jpa:
     hibernate:
       ddl-auto: create
