--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://your-prod-db:3306/bookstore
+    url: jdbc:mysql://s4.java21.net:13306/project_be10_team1_prod
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: prod_user
-    password: prod_password
+    username: project_be10_team1
+    password: N(zwIEW9ge203yXO)
   jpa:
     hibernate:
       ddl-auto: validate
