--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,5 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/intellij,gradle,java
 
 .DS_Store
+
+target/generated-sources/
