--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: Run Tests
+      run: mvn test
+
     - name: Upload JaCoCo coverage report
       uses: actions/upload-artifact@v4
       with:
