--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,5 +43,6 @@ jobs:
       run: |
         mvn sonar:sonar \
           -Dsonar.projectKey=1lluwa-product-service \
+          -Dsonar.projectName="1lluwa Product Service" \
           -Dsonar.host.url=$SONAR_HOST_URL \
           -Dsonar.login=$SONAR_TOKEN
