chore: Order 서비스 CI/CD 설정

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>product-service</finalName>
     </build>
 
 </project>
