feat: Eureka 설정 및 의존성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: illuwa
+    name: product-service
   profiles:
-    active: test
+    active: dev
 
 external:
   aladin:
