--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
