--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -10,9 +10,14 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true;
     show-sql: true
 
   h2:
     console:
       enabled: true
       path: /h2-console
+
+eureka:
+  client:
+    enabled: false
