--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy Product-Service to Server
 
 on:
   push:
-    branches:
-      - develop
-      - master
+    branches: [ "develop", "master" ]
+  pull_request:
+    branches: [ "develop", "master"]
 
 jobs:
   analyze:
