--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,6 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-
     </dependencies>
 
     <dependencyManagement>
@@ -199,4 +198,22 @@
         <finalName>product-service</finalName>
     </build>
 
+    <profiles>
+        <profile>
+            <id>test</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-devtools</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
+
 </project>
+
