--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -4,6 +4,8 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  thymeleaf:
+    cache: false
   jpa:
     hibernate:
       ddl-auto: create-drop
