--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -12,14 +12,25 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true;
+        format_sql: true
     show-sql: true
+    defer-datasource-initialization: true
+
 
   h2:
     console:
       enabled: true
       path: /h2-console
 
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+        type:
+          descriptor:
+            sql:
+              BasicBinder: TRACE
 eureka:
   client:
     enabled: false
