--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,17 @@ jobs:
           username: ${{ secrets.SSH_ID }}
           password: ${{ secrets.REMOTE_PASS }}
           port: ${{ secrets.SSH_PORT }}
-          source: "target/product-service.jar"
+          source: "target/1lluwa-product-service.jar"
           target: "~/deploy/product"
           rm: false
+
+      - name: Restart service via remote script
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          password: ${{ secrets.REMOTE_PASS }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd ~/deploy/product
+            ./start.sh
