--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -195,7 +200,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>product-service</finalName>
+        <finalName>1lluwa-product-service</finalName>
     </build>
 
     <profiles>
