feat : pom에 jacoco 커버리지 제외 추가(dto,entity,mapper,Config)

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,10 @@
                 <configuration>
                     <excludes>
                         <exclude>**/Q*</exclude>
+                        <exclude>**/dto/**</exclude>
+                        <exclude>**/entity/**</exclude>
+                        <exclude>**/*MapperImpl.class</exclude>
+                        <exclude>**/*Config.class</exclude>
                     </excludes>
                 </configuration>
             </plugin>
