chore : 배포를 위해 fineName 수정

--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>1lluwa-product-service</finalName>
+        <finalName>product-service</finalName>
     </build>
 
     <profiles>
