--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 spring:
   application:
     name: product-service
-  profiles:
-    active: dev
   config:
     import: optional:configserver:https://book1lluwa.store/config/
-#  sql:
-#    init:
-#      mode: always
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.cfg: DEBUG
+    org.springframework.orm.jpa: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.tool.schema: DEBUG  # 스키마 관리 로그
+    org.hibernate.engine.jdbc.env.internal: DEBUG  # 데이터베이스 정보
