--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    elasticsearch:
+      uris: http://s4.java21.net:9200
+      username: elastic
+      password: nhnacademy123!
 
 logging:
   level:
