--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
@@ -219,6 +225,7 @@
                     <artifactId>spring-boot-devtools</artifactId>
                     <scope>runtime</scope>
                 </dependency>
+
             </dependencies>
         </profile>
     </profiles>
