--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <version>2.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
