chore: 테스트 커버리지에 불필요한 class 제외

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
                         <exclude>**/entity/**</exclude>
                         <exclude>**/*MapperImpl.class</exclude>
                         <exclude>**/*Config.class</exclude>
+                        <exclude>**/service/Impl/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
