--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
-name: Deploy Product-Service to Server
+name: Deploy product-service with Docker
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   deploy:
-    name: Build & Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -19,21 +19,22 @@ jobs:
           distribution: 'temurin'
           java-version: 21
 
-      - name: Build with Maven (skip tests)
-        run: mvn clean package -DskipTests
+      - name: Build JAR with Maven
+        run: mvn -B clean package -DskipTests
 
-      - name: Upload jar to server
-        uses: appleboy/scp-action@v0.1.7
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          host: ${{ secrets.SSH_IP }}
-          username: ${{ secrets.SSH_ID }}
-          password: ${{ secrets.REMOTE_PASS }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "target/1lluwa-product-service.jar"
-          target: "~/deploy/product"
-          rm: false
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Restart service via remote script
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/1lluwa-product-service:latest -f ./Dockerfile .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/1lluwa-product-service:latest
+
+      - name: Rolling Deploy (v1)
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SSH_IP }}
@@ -41,5 +42,16 @@ jobs:
           password: ${{ secrets.REMOTE_PASS }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ~/deploy/product
-            ./start.sh
+            chmod +x ~/scripts/product-service-deploy.sh
+            ~/scripts/product-service-deploy.sh v1
+
+      - name: Rolling Deploy (v2)
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          password: ${{ secrets.REMOTE_PASS }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            chmod +x ~/scripts/product-service-deploy.sh
+            ~/scripts/product-service-deploy.sh v2
