--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: product-service
   config:
-    import: optional:configserver:https://book1lluwa.store/config/
+    import: optional:configserver:http://1lluwa-config-server:10319/
 
 logging:
   level:
